--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "39ec119b",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "      <th>MultiDeviceAccess</th>\n",
        "      <th>DeviceRegistered</th>\n",
        "      <th>ViewingHoursPerWeek</th>\n",
-       "      <th>...</th>\n",
+       "      <th>AverageViewingDuration</th>\n",
        "      <th>ContentDownloadsPerMonth</th>\n",
        "      <th>GenrePreference</th>\n",
        "      <th>UserRating</th>\n",
@@ -57,13 +57,35 @@
        "      <th>WatchlistSize</th>\n",
        "      <th>ParentalControl</th>\n",
        "      <th>SubtitlesEnabled</th>\n",
-       "      <th>CustomerID</th>\n",
        "      <th>Churn</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>LOHRYYC9E8</th>\n",
        "      <td>42</td>\n",
        "      <td>11.321950</td>\n",
        "      <td>475.521914</td>\n",
@@ -74,7 +96,7 @@
        "      <td>Yes</td>\n",
        "      <td>Tablet</td>\n",
        "      <td>0.386852</td>\n",
-       "      <td>...</td>\n",
+       "      <td>24.593361</td>\n",
        "      <td>25</td>\n",
        "      <td>Comedy</td>\n",
        "      <td>3.489465</td>\n",
@@ -83,11 +105,10 @@
        "      <td>15</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
-       "      <td>LOHRYYC9E8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>RIH7RFEZCS</th>\n",
        "      <td>95</td>\n",
        "      <td>12.810915</td>\n",
        "      <td>1217.036887</td>\n",
@@ -98,7 +119,7 @@
        "      <td>No</td>\n",
        "      <td>Mobile</td>\n",
        "      <td>37.123000</td>\n",
-       "      <td>...</td>\n",
+       "      <td>102.860795</td>\n",
        "      <td>21</td>\n",
        "      <td>Comedy</td>\n",
        "      <td>2.251860</td>\n",
@@ -107,11 +128,10 @@
        "      <td>8</td>\n",
        "      <td>No</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>RIH7RFEZCS</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>JB5J8X2UY1</th>\n",
        "      <td>6</td>\n",
        "      <td>NaN</td>\n",
        "      <td>91.583304</td>\n",
@@ -122,7 +142,7 @@
        "      <td>No</td>\n",
        "      <td>Tablet</td>\n",
        "      <td>30.716944</td>\n",
-       "      <td>...</td>\n",
+       "      <td>10.512415</td>\n",
        "      <td>29</td>\n",
        "      <td>Fantasy</td>\n",
        "      <td>NaN</td>\n",
@@ -131,11 +151,10 @@
        "      <td>14</td>\n",
        "      <td>No</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>JB5J8X2UY1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>Z4GZJIB90P</th>\n",
        "      <td>54</td>\n",
        "      <td>17.917819</td>\n",
        "      <td>967.562224</td>\n",
@@ -146,7 +165,7 @@
        "      <td>No</td>\n",
        "      <td>Mobile</td>\n",
        "      <td>2.495373</td>\n",
-       "      <td>...</td>\n",
+       "      <td>45.246834</td>\n",
        "      <td>45</td>\n",
        "      <td>Drama</td>\n",
        "      <td>1.275004</td>\n",
@@ -155,11 +174,10 @@
        "      <td>12</td>\n",
        "      <td>No</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Z4GZJIB90P</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>B3BDJTW0L9</th>\n",
        "      <td>27</td>\n",
        "      <td>NaN</td>\n",
        "      <td>339.057244</td>\n",
@@ -170,7 +188,7 @@
        "      <td>No</td>\n",
        "      <td>Mobile</td>\n",
        "      <td>39.936910</td>\n",
-       "      <td>...</td>\n",
+       "      <td>94.310954</td>\n",
        "      <td>44</td>\n",
        "      <td>Comedy</td>\n",
        "      <td>3.236230</td>\n",
@@ -179,66 +197,76 @@
        "      <td>18</td>\n",
        "      <td>No</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>B3BDJTW0L9</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   AccountAge  MonthlyCharges  TotalCharges SubscriptionType  \\\n",
-       "0          42       11.321950    475.521914            Basic   \n",
-       "1          95       12.810915   1217.036887         Standard   \n",
-       "2           6             NaN     91.583304         Standard   \n",
-       "3          54       17.917819    967.562224            Basic   \n",
-       "4          27             NaN    339.057244            Basic   \n",
+       "            AccountAge  MonthlyCharges  TotalCharges SubscriptionType  \\\n",
+       "CustomerID                                                              \n",
+       "LOHRYYC9E8          42       11.321950    475.521914            Basic   \n",
+       "RIH7RFEZCS          95       12.810915   1217.036887         Standard   \n",
+       "JB5J8X2UY1           6             NaN     91.583304         Standard   \n",
+       "Z4GZJIB90P          54       17.917819    967.562224            Basic   \n",
+       "B3BDJTW0L9          27             NaN    339.057244            Basic   \n",
        "\n",
-       "      PaymentMethod PaperlessBilling ContentType MultiDeviceAccess  \\\n",
-       "0  Electronic check              Yes      Movies               Yes   \n",
-       "1  Electronic check              Yes    TV Shows                No   \n",
-       "2       Credit card              Yes    TV Shows                No   \n",
-       "3               NaN              Yes      Movies                No   \n",
-       "4      Mailed check               No    TV Shows                No   \n",
+       "               PaymentMethod PaperlessBilling ContentType MultiDeviceAccess  \\\n",
+       "CustomerID                                                                    \n",
+       "LOHRYYC9E8  Electronic check              Yes      Movies               Yes   \n",
+       "RIH7RFEZCS  Electronic check              Yes    TV Shows                No   \n",
+       "JB5J8X2UY1       Credit card              Yes    TV Shows                No   \n",
+       "Z4GZJIB90P               NaN              Yes      Movies                No   \n",
+       "B3BDJTW0L9      Mailed check               No    TV Shows                No   \n",
        "\n",
-       "  DeviceRegistered  ViewingHoursPerWeek  ...  ContentDownloadsPerMonth  \\\n",
-       "0           Tablet             0.386852  ...                        25   \n",
-       "1           Mobile            37.123000  ...                        21   \n",
-       "2           Tablet            30.716944  ...                        29   \n",
-       "3           Mobile             2.495373  ...                        45   \n",
-       "4           Mobile            39.936910  ...                        44   \n",
+       "           DeviceRegistered  ViewingHoursPerWeek  AverageViewingDuration  \\\n",
+       "CustomerID                                                                 \n",
+       "LOHRYYC9E8           Tablet             0.386852               24.593361   \n",
+       "RIH7RFEZCS           Mobile            37.123000              102.860795   \n",
+       "JB5J8X2UY1           Tablet            30.716944               10.512415   \n",
+       "Z4GZJIB90P           Mobile             2.495373               45.246834   \n",
+       "B3BDJTW0L9           Mobile            39.936910               94.310954   \n",
        "\n",
-       "   GenrePreference UserRating  SupportTicketsPerMonth  Gender WatchlistSize  \\\n",
-       "0           Comedy   3.489465                       7  Female            15   \n",
-       "1           Comedy   2.251860                       3    Male             8   \n",
-       "2          Fantasy        NaN                       4    Male            14   \n",
-       "3            Drama   1.275004                       3    Male            12   \n",
-       "4           Comedy   3.236230                       4  Female            18   \n",
+       "            ContentDownloadsPerMonth GenrePreference  UserRating  \\\n",
+       "CustomerID                                                         \n",
+       "LOHRYYC9E8                        25          Comedy    3.489465   \n",
+       "RIH7RFEZCS                        21          Comedy    2.251860   \n",
+       "JB5J8X2UY1                        29         Fantasy         NaN   \n",
+       "Z4GZJIB90P                        45           Drama    1.275004   \n",
+       "B3BDJTW0L9                        44          Comedy    3.236230   \n",
        "\n",
-       "   ParentalControl SubtitlesEnabled  CustomerID Churn  \n",
-       "0               No               No  LOHRYYC9E8     0  \n",
-       "1               No              NaN  RIH7RFEZCS     0  \n",
-       "2               No              Yes  JB5J8X2UY1     1  \n",
-       "3               No              NaN  Z4GZJIB90P     0  \n",
-       "4               No              NaN  B3BDJTW0L9     0  \n",
+       "            SupportTicketsPerMonth  Gender  WatchlistSize ParentalControl  \\\n",
+       "CustomerID                                                                  \n",
+       "LOHRYYC9E8                       7  Female             15              No   \n",
+       "RIH7RFEZCS                       3    Male              8              No   \n",
+       "JB5J8X2UY1                       4    Male             14              No   \n",
+       "Z4GZJIB90P                       3    Male             12              No   \n",
+       "B3BDJTW0L9                       4  Female             18              No   \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "           SubtitlesEnabled  Churn  \n",
+       "CustomerID                          \n",
+       "LOHRYYC9E8               No      0  \n",
+       "RIH7RFEZCS              NaN      0  \n",
+       "JB5J8X2UY1              Yes      1  \n",
+       "Z4GZJIB90P              NaN      0  \n",
+       "B3BDJTW0L9              NaN      0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(r'C:\\Users\\LENOVO\\Downloads\\archive\\Subscription_Dataset.csv')\n",
+    "df.set_index('CustomerID', inplace=True)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "34269ffc",
    "metadata": {},
    "outputs": [
@@ -278,12 +306,13 @@
     }
    ],
    "source": [
+    "#Revisión de la estructura del DataFrame\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e3d6dd7b",
    "metadata": {},
    "outputs": [
@@ -320,8 +349,86 @@
     }
    ],
    "source": [
+    "#Evaluación de los valores nulos por columna\n",
     "df.isnull().sum()   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13bfcd4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MonthlyCharges      21.183801\n",
+       "TotalCharges        19.314642\n",
+       "SubscriptionType     5.192108\n",
+       "PaymentMethod       23.156802\n",
+       "DeviceRegistered     7.892004\n",
+       "GenrePreference     11.422638\n",
+       "UserRating          27.102804\n",
+       "Gender               4.153686\n",
+       "SubtitlesEnabled    83.073728\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Evaluación en % de los faltantes por columna\n",
+    "faltantes = df.isna().mean()*100\n",
+    "faltantes[faltantes>0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4d68e2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SubscriptionType\n",
+       "Premium     333\n",
+       "Basic       293\n",
+       "Standard    287\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Revisión de los valores posibles en la columna SubscriptionType\n",
+    "df['SubscriptionType'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6aaca1f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Eiminamos la columna SubtitlesEnabled por tener más del 80% de valores faltantes\n",
+    "df.drop(['SubtitlesEnabled'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7aba074e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
