--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "id": "32358b05",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,9 @@
     "import numpy as np \n",
     "import missingno as msno\n",
     "from sklearn.impute import KNNImputer\n",
-    "from sklearn.preprocessing import LabelEncoder\n"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n"
    ]
   },
   {
@@ -1141,12 +1143,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02d4d50c",
+   "metadata": {},
+   "source": [
+    "### 2. Partición de datos "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e5dc5cb2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Separamos variables del objetivo (churn)\n",
+    "X = df.drop(columns=['Churn', 'CustomerID'])\n",
+    "y = df['Churn']\n",
+    "\n",
+    "# Partición train/test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
