--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "32358b05",
    "metadata": {},
    "outputs": [],
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "babb2448",
    "metadata": {},
    "outputs": [],
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "47bdf599",
    "metadata": {},
    "outputs": [
@@ -953,7 +953,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "id": "79a7c1fe",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1133,7 @@
        "max                  9.000000      24.000000    1.000000  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,19 +1152,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "e5dc5cb2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Separamos variables del objetivo (churn)\n",
-    "X = df.drop(columns=['Churn', 'CustomerID'])\n",
+    "X = df.drop(columns=['Churn'])\n",
     "y = df['Churn']\n",
     "\n",
     "# Partición train/test\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "776edcb4",
+   "metadata": {},
+   "source": [
+    "#### 2.1 Imputación de la variable PaymentMethod a partir de otras variables con RF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2d3dc7a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Selección de filas con y sin PaymentMethod en train\n",
+    "train_payment_complete = X_train[X_train['PaymentMethod'].notna()]\n",
+    "X_train_missing = X_train[X_train['PaymentMethod'].isna()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c03f419",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Selección de variables relacionadas\n",
+    "features_num = ['MonthlyCharges', 'TotalCharges', 'AccountAge']\n",
+    "\n",
+    "# Entrenar RF solo con filas completas de train\n",
+    "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf.fit(train_payment_complete[features_num], train_payment_complete['PaymentMethod'])\n",
+    "\n",
+    "# Predecir PaymentMethod en train (solo filas con NaN)\n",
+    "preds_train = pd.Series(\n",
+    "    rf.predict(X_train_missing[features_num]),\n",
+    "    index=X_train_missing.index\n",
+    ")\n",
+    "X_train.loc[X_train_missing.index, 'PaymentMethod'] = preds_train\n",
+    "\n",
+    "# Imputar PaymentMethod en test usando modelo entrenado en train\n",
+    "X_test_missing = X_test[X_test['PaymentMethod'].isna()]\n",
+    "preds_test = pd.Series(\n",
+    "    rf.predict(X_test_missing[features_num]),\n",
+    "    index=X_test_missing.index\n",
+    ")\n",
+    "X_test.loc[X_test_missing.index, 'PaymentMethod'] = preds_test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "40e83942",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train PaymentMethod:\n",
+      "PaymentMethod\n",
+      "Credit card         265\n",
+      "Electronic check    225\n",
+      "Bank transfer       224\n",
+      "Mailed check         56\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Test PaymentMethod:\n",
+      "PaymentMethod\n",
+      "Credit card         66\n",
+      "Electronic check    57\n",
+      "Bank transfer       56\n",
+      "Mailed check        14\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verificación\n",
+    "print(\"Train PaymentMethod:\")\n",
+    "print(X_train['PaymentMethod'].value_counts())\n",
+    "print(\"\\nTest PaymentMethod:\")\n",
+    "print(X_test['PaymentMethod'].value_counts())"
    ]
   }
  ],
