--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -13,7 +13,8 @@
     "from sklearn.impute import KNNImputer\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import OneHotEncoder\n"
    ]
   },
   {
@@ -535,6 +536,32 @@
    "source": [
     "#Revisión de los valores posibles en la columna GenrePreference\n",
     "df['GenrePreference'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a6a8a51f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ContentType\n",
+       "Both        349\n",
+       "TV Shows    311\n",
+       "Movies      303\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Revisión de los valores posibles en la columna GenrePreference\n",
+    "df['ContentType'].value_counts()"
    ]
   },
   {
@@ -1189,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "8c03f419",
    "metadata": {},
    "outputs": [],
@@ -1251,6 +1278,230 @@
     "print(X_train['PaymentMethod'].value_counts())\n",
     "print(\"\\nTest PaymentMethod:\")\n",
     "print(X_test['PaymentMethod'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55828727",
+   "metadata": {},
+   "source": [
+    "### 2.2 One Hot Encoding para las variables categóricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2b48e104",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_cols = X_train.select_dtypes(include=['object']).columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b158bb02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear el encoder\n",
+    "ohe = OneHotEncoder(\n",
+    "    drop='first',              # elimina 1 categoría por dummy trap\n",
+    "    handle_unknown='ignore',   # categorías nuevas en test -> columnas en 0\n",
+    "    sparse_output=False        # matriz densa\n",
+    ")\n",
+    "\n",
+    "# Ajustar SOLO con train\n",
+    "X_train_encoded = ohe.fit_transform(X_train[categorical_cols])\n",
+    "\n",
+    "# Transformar test usando el mismo encoder\n",
+    "X_test_encoded  = ohe.transform(X_test[categorical_cols])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "175d9987",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear DataFrame con las categorías codificadas\n",
+    "X_train_encoded_df = pd.DataFrame(\n",
+    "    X_train_encoded,\n",
+    "    index=X_train.index,\n",
+    "    columns=ohe.get_feature_names_out(categorical_cols)\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f167050d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear DataFrame con las categorías codificadas\n",
+    "X_test_encoded_df = pd.DataFrame(\n",
+    "    X_test_encoded,         \n",
+    "    index=X_test.index,      \n",
+    "    columns=ohe.get_feature_names_out(categorical_cols)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9a92aaff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['SubscriptionType_Premium', 'SubscriptionType_Standard',\n",
+       "       'PaymentMethod_Credit card', 'PaymentMethod_Electronic check',\n",
+       "       'PaymentMethod_Mailed check', 'PaperlessBilling_Yes',\n",
+       "       'ContentType_Movies', 'ContentType_TV Shows', 'MultiDeviceAccess_Yes',\n",
+       "       'DeviceRegistered_Mobile', 'DeviceRegistered_TV',\n",
+       "       'DeviceRegistered_Tablet', 'GenrePreference_Comedy',\n",
+       "       'GenrePreference_Drama', 'GenrePreference_Fantasy',\n",
+       "       'GenrePreference_Sci-Fi', 'Gender_Male', 'ParentalControl_Yes'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_encoded_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "92acca44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(770, 18)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_encoded_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2991f09a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(193, 18)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test_encoded_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "29c29a68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['AccountAge', 'MonthlyCharges', 'TotalCharges', 'ViewingHoursPerWeek',\n",
+      "       'AverageViewingDuration', 'ContentDownloadsPerMonth',\n",
+      "       'SupportTicketsPerMonth', 'WatchlistSize'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerical_cols = X_train.select_dtypes(include=['float', 'int']).columns\n",
+    "print(numerical_cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf94fd4b",
+   "metadata": {},
+   "source": [
+    "#### Concatenamos de nuevo al Train y al Test el resto de variables numéricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42a08e2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#concatenación de las variables numéricas y categóricas codificadas en Train y en Test\n",
+    "X_train_final = pd.concat([X_train[numerical_cols], X_train_encoded_df], axis=1)\n",
+    "X_test_final  = pd.concat([X_test[numerical_cols],  X_test_encoded_df], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b69f8a15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(770, 26)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_final.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "2249e87f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(193, 26)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test_final.shape"
    ]
   }
  ],
