--- a/notebooks/02_Feature_Engineering.ipynb
+++ b/notebooks/02_Feature_Engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "a1710038",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,13 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "import shap"
+    "import shap\n",
+    "from joblib import dump, load"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "bf15a653",
    "metadata": {},
    "outputs": [
@@ -218,7 +219,7 @@
        "4             18              No      0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "1fd7ce4f",
    "metadata": {},
    "outputs": [
@@ -258,7 +259,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "45b9d69f",
    "metadata": {},
    "outputs": [],
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "722fc9ea",
    "metadata": {},
    "outputs": [],
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "13f13873",
    "metadata": {},
    "outputs": [],
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "12ef1535",
    "metadata": {},
    "outputs": [],
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "ec94d8e5",
    "metadata": {},
    "outputs": [
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "de9fb4dd",
    "metadata": {},
    "outputs": [],
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "90341819",
    "metadata": {},
    "outputs": [],
@@ -430,7 +431,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
+   "id": "db15d9b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:\\\\Users\\\\LENOVO\\\\Documents\\\\GitHub\\\\ML_PowerBI\\\\models\\\\ohe_encoder.joblib']"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ohe_columns = ohe.get_feature_names_out(categorical_cols)\n",
+    "dump(ohe_columns, r\"C:\\Users\\LENOVO\\Documents\\GitHub\\ML_PowerBI\\models\\ohe_columns.joblib\")\n",
+    "dump(ohe, r\"C:\\Users\\LENOVO\\Documents\\GitHub\\ML_PowerBI\\models\\ohe_encoder.joblib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "ecf87325",
    "metadata": {},
    "outputs": [],
@@ -445,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "5a61e863",
    "metadata": {},
    "outputs": [],
@@ -460,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "7bef573f",
    "metadata": {},
    "outputs": [
@@ -478,7 +502,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "cfe249e5",
    "metadata": {},
    "outputs": [
@@ -499,7 +523,7 @@
        "(770, 18)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "d25bb250",
    "metadata": {},
    "outputs": [
@@ -520,7 +544,7 @@
        "(193, 18)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "43cb3d91",
    "metadata": {},
    "outputs": [
@@ -561,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "2fe729cc",
    "metadata": {},
    "outputs": [],
@@ -573,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "id": "5a63e910",
    "metadata": {},
    "outputs": [
@@ -583,7 +607,7 @@
        "(770, 26)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "id": "da385726",
    "metadata": {},
    "outputs": [
@@ -604,7 +628,7 @@
        "(193, 26)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "id": "64fa6fe2",
    "metadata": {},
    "outputs": [
@@ -664,6 +688,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "61c28918",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.savefig(r\"C:\\Users\\LENOVO\\Documents\\GitHub\\ML_PowerBI\\reports\\figures\\corr_matrix.png\", dpi=300)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4b48b7d7",
    "metadata": {},
@@ -673,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "id": "75ec6afe",
    "metadata": {},
    "outputs": [],
@@ -693,7 +737,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
+   "id": "24b6e3a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:\\\\Users\\\\LENOVO\\\\Documents\\\\GitHub\\\\ML_PowerBI\\\\models\\\\scaler_final.joblib']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Guardado del escalar para uso futuro\n",
+    "dump(scaler, r\"C:\\Users\\LENOVO\\Documents\\GitHub\\ML_PowerBI\\models\\scaler_final.joblib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "67dfd496",
    "metadata": {},
    "outputs": [],
@@ -701,6 +767,56 @@
     " #Guardar los datasets procesados\n",
     "X_train_final.to_csv(r'C:\\Users\\LENOVO\\Documents\\GitHub\\ML_PowerBI\\data\\processed\\X_train_final.csv', index=False)\n",
     "X_test_final.to_csv(r'C:\\Users\\LENOVO\\Documents\\GitHub\\ML_PowerBI\\data\\processed\\X_test_final.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c4ff1b6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 770 entries, 621 to 102\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   AccountAge                      770 non-null    float64\n",
+      " 1   MonthlyCharges                  770 non-null    float64\n",
+      " 2   TotalCharges                    770 non-null    float64\n",
+      " 3   ViewingHoursPerWeek             770 non-null    float64\n",
+      " 4   AverageViewingDuration          770 non-null    float64\n",
+      " 5   ContentDownloadsPerMonth        770 non-null    float64\n",
+      " 6   SupportTicketsPerMonth          770 non-null    float64\n",
+      " 7   WatchlistSize                   770 non-null    float64\n",
+      " 8   SubscriptionType_Premium        770 non-null    float64\n",
+      " 9   SubscriptionType_Standard       770 non-null    float64\n",
+      " 10  PaymentMethod_Credit card       770 non-null    float64\n",
+      " 11  PaymentMethod_Electronic check  770 non-null    float64\n",
+      " 12  PaymentMethod_Mailed check      770 non-null    float64\n",
+      " 13  PaperlessBilling_Yes            770 non-null    float64\n",
+      " 14  ContentType_Movies              770 non-null    float64\n",
+      " 15  ContentType_TV Shows            770 non-null    float64\n",
+      " 16  MultiDeviceAccess_Yes           770 non-null    float64\n",
+      " 17  DeviceRegistered_Mobile         770 non-null    float64\n",
+      " 18  DeviceRegistered_TV             770 non-null    float64\n",
+      " 19  DeviceRegistered_Tablet         770 non-null    float64\n",
+      " 20  GenrePreference_Comedy          770 non-null    float64\n",
+      " 21  GenrePreference_Drama           770 non-null    float64\n",
+      " 22  GenrePreference_Fantasy         770 non-null    float64\n",
+      " 23  GenrePreference_Sci-Fi          770 non-null    float64\n",
+      " 24  Gender_Male                     770 non-null    float64\n",
+      " 25  ParentalControl_Yes             770 non-null    float64\n",
+      "dtypes: float64(26)\n",
+      "memory usage: 178.6 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_final.info()"
    ]
   }
  ],
