--- a/notebooks/01_Data_Cleaning.ipynb
+++ b/notebooks/01_Data_Cleaning.ipynb
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "35774781",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
    ],
    "source": [
     "#Revisiíon de los valores en la columna GenrePreference\n",
-    "df[\"GenrePreference\"].value_counts()"
+    "df[\"GenrePreference\"].value_counts() # [\"Action\",\"Drama\",\"Comedy\",\"Documental\",\"Sci-Fi\""
    ]
   },
   {
