--- a/notebooks/02_Feature_Engineering.ipynb
+++ b/notebooks/02_Feature_Engineering.ipynb
@@ -279,6 +279,209 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "1d01293a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AccountAge</th>\n",
+       "      <th>MonthlyCharges</th>\n",
+       "      <th>TotalCharges</th>\n",
+       "      <th>SubscriptionType</th>\n",
+       "      <th>PaymentMethod</th>\n",
+       "      <th>PaperlessBilling</th>\n",
+       "      <th>ContentType</th>\n",
+       "      <th>MultiDeviceAccess</th>\n",
+       "      <th>DeviceRegistered</th>\n",
+       "      <th>ViewingHoursPerWeek</th>\n",
+       "      <th>AverageViewingDuration</th>\n",
+       "      <th>ContentDownloadsPerMonth</th>\n",
+       "      <th>GenrePreference</th>\n",
+       "      <th>SupportTicketsPerMonth</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>WatchlistSize</th>\n",
+       "      <th>ParentalControl</th>\n",
+       "      <th>Churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>42</td>\n",
+       "      <td>11.321950</td>\n",
+       "      <td>475.521914</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Movies</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Tablet</td>\n",
+       "      <td>0.386852</td>\n",
+       "      <td>24.593361</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>15</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>95</td>\n",
+       "      <td>12.810915</td>\n",
+       "      <td>1217.036887</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>TV Shows</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>37.123000</td>\n",
+       "      <td>102.860795</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>8</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>10.400706</td>\n",
+       "      <td>91.583304</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Credit card</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>TV Shows</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Tablet</td>\n",
+       "      <td>30.716944</td>\n",
+       "      <td>10.512415</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Fantasy</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>14</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>54</td>\n",
+       "      <td>17.917819</td>\n",
+       "      <td>967.562224</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Movies</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>2.495373</td>\n",
+       "      <td>45.246834</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>12</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27</td>\n",
+       "      <td>11.005068</td>\n",
+       "      <td>339.057244</td>\n",
+       "      <td>Basic</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>No</td>\n",
+       "      <td>TV Shows</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>39.936910</td>\n",
+       "      <td>94.310954</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>18</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   AccountAge  MonthlyCharges  TotalCharges SubscriptionType  \\\n",
+       "0          42       11.321950    475.521914            Basic   \n",
+       "1          95       12.810915   1217.036887         Standard   \n",
+       "2           6       10.400706     91.583304         Standard   \n",
+       "3          54       17.917819    967.562224            Basic   \n",
+       "4          27       11.005068    339.057244            Basic   \n",
+       "\n",
+       "      PaymentMethod PaperlessBilling ContentType MultiDeviceAccess  \\\n",
+       "0  Electronic check              Yes      Movies               Yes   \n",
+       "1  Electronic check              Yes    TV Shows                No   \n",
+       "2       Credit card              Yes    TV Shows                No   \n",
+       "3               NaN              Yes      Movies                No   \n",
+       "4      Mailed check               No    TV Shows                No   \n",
+       "\n",
+       "  DeviceRegistered  ViewingHoursPerWeek  AverageViewingDuration  \\\n",
+       "0           Tablet             0.386852               24.593361   \n",
+       "1           Mobile            37.123000              102.860795   \n",
+       "2           Tablet            30.716944               10.512415   \n",
+       "3           Mobile             2.495373               45.246834   \n",
+       "4           Mobile            39.936910               94.310954   \n",
+       "\n",
+       "   ContentDownloadsPerMonth GenrePreference  SupportTicketsPerMonth  Gender  \\\n",
+       "0                        25          Comedy                       7  Female   \n",
+       "1                        21          Comedy                       3    Male   \n",
+       "2                        29         Fantasy                       4    Male   \n",
+       "3                        45           Drama                       3    Male   \n",
+       "4                        44          Comedy                       4  Female   \n",
+       "\n",
+       "   WatchlistSize ParentalControl  Churn  \n",
+       "0             15              No      0  \n",
+       "1              8              No      0  \n",
+       "2             14              No      1  \n",
+       "3             12              No      0  \n",
+       "4             18              No      0  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_02.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "82d47352",
    "metadata": {},
@@ -410,14 +613,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "90341819",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Crear el encoder\n",
     "ohe = OneHotEncoder(\n",
-    "    drop='first',              # elimina 1 categoría por dummy trap\n",
+    "    drop='first',              # elimina 1 categoría por dummy trap (evitar redundancia)\n",
     "    handle_unknown='ignore',   # categorías nuevas en test -> columnas en 0\n",
     "    sparse_output=False        # matriz densa\n",
     ")\n",
