--- a/notebooks/02_Feature_Engineering.ipynb
+++ b/notebooks/02_Feature_Engineering.ipynb
@@ -270,12 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "id": "45b9d69f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_02.to_csv(r'C:\\Users\\LENOVO\\Documents\\GitHub\\ML_PowerBI\\data\\processed\\df_02.csv', index=False)"
+    "df_02.to_csv(r'C:\\Users\\LENOVO\\Documents\\GitHub\\ML_PowerBI\\data\\processed\\df_02.csv', index=True)"
    ]
   },
   {
