--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -1333,14 +1333,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "b158bb02",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Crear el encoder\n",
     "ohe = OneHotEncoder(\n",
-    "    drop='first',              # elimina 1 categoría por dummy trap\n",
+    "    drop='first',              # elimina 1 categoría\n",
     "    handle_unknown='ignore',   # categorías nuevas en test -> columnas en 0\n",
     "    sparse_output=False        # matriz densa\n",
     ")\n",
